cmake_minimum_required(VERSION 3.19)
project(cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(ch1 ch1/main.cpp ch1/foo.c ch1/foo.h)
add_executable(ch2 ch2/main.cpp)
add_executable(ch3 ch3/main.cpp)
add_executable(ch4 ch4/main.cpp)
add_executable(ch5 ch5/main.cpp)
add_executable(ch6 ch6/main.cpp)
add_executable(ch7 ch7/main.cpp)